# lottie-react-native

./: .babelrc  .eslintignore  .eslintrc  .gitattributes  .gitignore  .npmignore  .prettierrc  .project  .travis.yml  .yarnrc  .yarnrc.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Gemfile  LICENSE  LottieReactNative.podspec  MIGRATION-5-TO-6.md  README.md  babel.config.js  babel.config.json  book.json  build.gradle  dotlottie.patch  eslint.config.mjs  gradle.properties  index.d.ts  index.js  lefthook.yml  lottie-react-native.podspec  metro.config.js  nitro.json  package-lock.json  package.json  react-native.config.js  rn-cli.config.js  settings.gradle  tsconfig.build.json  tsconfig.json
.github/: FUNDING.yml  stale.yml
android/: CMakeLists.txt  build.gradle  gradle-maven-push.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/airbnb/android/react/lottie/: LottieAnimationViewManager.java  LottieAnimationViewManagerImpl.java  LottiePackage.java
android/src/main/java/com/lottiereactnative/: LottieReactNativePackage.kt
android/src/main/java/com/margelo/nitro/lottiereactnative/: LottieAnimationViewCommandManager.kt  LottieAnimationViewPropertyManager.kt  LottieReactNative.kt
android/src/oldarch/com/airbnb/android/react/lottie/: LottieAnimationViewManager.java
docs/: GLOSSARY.md  README.md  api.md  typescript.md
example/: .gitignore  .prettierrc.js  App.tsx  ExamplePicker.js  Gemfile  LottieAnimatedExample.js  PlayerControls.js  ReactTestApp-Resources.podspec.json  app.json  (+7 more)
(+1658 files in other folders)
